kubernetes-istio/configuration-deployment-sb.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  namespace: game
  name: configservice-sb
  labels:
    app: configservice
    version: sb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: configservice
      version: sb
  template:
    metadata:
      labels:
        app: configservice
        version: sb
    spec:
      containers:
      - name: configservice
        image: quay.io/burrsutter/configuration-service-sb:1.0.4
        ports:
          - containerPort: 8080
