kubernetes-istio/gameserver-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  namespace: game
  name: gameserver
spec:
  hosts:
  - "*"
  gateways:
  - game-gateway
  http:
  - match:
    - uri:
        prefix: /game
    - uri:
        prefix: /a/
    route:
    - destination:
        host: gameserver
      weight: 100
